--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "author": "Giorgi Makharadze",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/http-errors": "^2.0.1",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.3",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.21",
