--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.3",
+    "body-parser": "^1.20.2",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
