--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "Giorgi Makharadze",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.4",
