--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -25,6 +27,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.3",
+    "@types/nodemailer": "^6.4.7",
     "body-parser": "^1.20.2",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.21",
